--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="Css/main.css">
+    <title>CarsExample</title>
 </head>
+
 <body>
-    <p>Max top</p>
+    <nav class="nav1">
+        <ul>
+            <li>
+                <a href="">Home</a>
+            </li>
+            <li>
+                <a href="">About</a>
+            </li>
+        </ul>
+    </nav>
+    <div class="container">
+        <a href=""><img src="src/image/Union.png" alt=""></a>
+    </div>
 </body>
+
 </html>
