--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <nav class="nav1">
         <ul>
             <li>
-                <a href=""><img src="src/image/Union.png" alt=""></a>
+                <a class="logo" href=""><img src="src/image/Union.png" alt=""></a>
             </li>
-            <li>
+            <li class="center-links">
                 <a href="">Home</a>
             </li>
-            <li>
+            <li class="center-links">
                 <a href="">About</a>
             </li>
         </ul>
