--- a/index.html
+++ b/index.html
@@ -10,19 +10,26 @@
 </head>
 
 <body>
-    <nav class="nav1">
-        <ul>
+    <header>
+        <nav class="nav1">
+            <ul>
+                <li class="center-links">
+                    <a href="">Home</a>
+                </li>
+                <li class="center-links">
+                    <a href="">About</a>
+                </li>
+            </ul>
+        </nav>
+        <div>
             <li>
                 <a class="logo" href=""><img src="src/image/Union.png" alt=""></a>
             </li>
-            <li class="center-links">
-                <a href="">Home</a>
+            <li>
+                <a class="logo2" href=""><img src="src/image/Plugin icon - 3.png" alt=""></a>
             </li>
-            <li class="center-links">
-                <a href="">About</a>
-            </li>
-        </ul>
-    </nav>
+        </div>
+    </header>
 </body>
 
 </html>
